# nib

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
assets/: nib.default.kdl  nib.example.kdl
src/: buffer.rs  cli.rs  command.rs  config.rs  editor.rs  keymap.rs  main.rs  mode.rs  terminal.rs  ui.rs
src/term/: input.rs  mod.rs  output.rs  size.rs
