[package]
name = "nib"
version = "0.3.0"
edition = "2024"
rust-version = "1.87"
authors = ["Atay Özcan <atay@oezcan.me>"]
license = "GPL-3.0-only"
description = "A minimal, highly-configurable modal terminal text editor for Linux x86_64"
repository = "https://github.com/atayozcan/nib"
readme = "README.md"
keywords = ["editor", "terminal", "vi", "modal", "kdl"]
categories = ["command-line-utilities", "text-editors"]

[[bin]]
name = "nib"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
bitflags = "2"
clap = { version = "4.6", features = ["derive"] }
etcetera = "0.11"
kdl = "6.5"
ropey = "1.6"
rustix = { version = "1.1", features = ["termios", "stdio"] }
signal-hook = "0.4"
unicode-segmentation = "1.13"
unicode-width = "0.2"
vte = "0.15"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
unreachable_pub = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
